--- a/index.html
+++ b/index.html
@@ -6,34 +6,38 @@
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
-
-    <header>
-      <h1 class="headline">Responsive Style Guide</h1>
-    </header>
-
-    <nav>
-      <ul>
-        <li class="nav-item">Link</li>
-        <li class="nav-item">Link</li>
-        <li class="nav-item">Link</li>
-      </ul>
-    </nav>
-
     <div id="wrapper">
 
-      <h3 class="headline">Device Check</h3>
+      <header>
+        <h1 class="headline">Responsive Style Guide</h1>
+      </header>
 
-      <div id="phone">
+      <nav>
+        <ul>
+          <li class="nav-item">Link</li>
+          <li class="nav-item">Link</li>
+          <li class="nav-item">Link</li>
+        </ul>
+      </nav>
+
+      <h3 class="headline">Device Check</h3>
+      <em class="byline">A visual style guide to get started with</em>
+
+      <p class="body-copy">This is a simple, basic style guide to get started with! Check out the <strong>style.scss</strong> file to delve into the style!</p>
+
+      <div id="phone" class="alert">
         <li>You're browsing on a phone-like device</li>
       </div>
 
-      <div id="tablet">
+      <div id="tablet" class="alert">
         <li>You're browsing on a tablet-like device</li>
       </div>
 
-      <div id="laptop">
+      <div id="laptop" class="alert">
         <li>You're browsing on a laptop-like device</li>
       </div>
+
+      <footer class="sub">&copy; 2015 GA Chicago & released under the MIT License</footer>
 
     </div>
 
